--- a/styles.css
+++ b/styles.css
@@ -125,7 +125,7 @@ body {
   border: none;
   margin: 4px;
   cursor: pointer;
-  background-color: white;
+  background-color: #003876;
   display: flex;
   align-items: center;
   gap: 4px;
